--- a/Pages/Admin/CreateSchedule.razor
+++ b/Pages/Admin/CreateSchedule.razor
@@ -1,5 +1,6 @@
 @attribute [Route(Routes.CreateSchedule)]
 @using Runner.Pages.Admin.Components
+@inject IJSRuntime JSRuntime
 
 <AdminLayout>
     <ChildContent>
@@ -95,7 +96,10 @@
                             </div>
                         </div>
                     }
-                    <button type="button" @onclick="() => OpenModal(currentWeekNum, currentDayNum)" class="@GetWeekRow(currentWeekNum) group flex items-center justify-center bg-gray-300 hover:bg-gray-600 dark:bg-slate-700 cursor-pointer h-8 sm:w-16 md:w-20 lg:w-24 xl:w-28 rounded p-2 col-span-1 hover:dark:bg-slate-900">
+                    <button type="button" @onclick="() => OpenModal(currentWeekNum, currentDayNum)" class="@GetWeekRow(currentWeekNum) 
+                        group flex items-center justify-center bg-gray-300 
+                        hover:bg-gray-600 dark:bg-gray-900 dark:shadow-sm dark:shadow-blue-500  cursor-pointer h-8 sm:w-16 md:w-20 
+                        lg:w-24 xl:w-28 rounded p-2 col-span-1 hover:dark:bg-gray-950">
                         <div class="opacity-0 group-hover:opacity-100 group-active:opacity-100 text-white text-xl">+</div>
                     </button>
                 }
@@ -106,44 +110,19 @@
             selectedWeekNumber="@SelectedWeekNumber"
             isOpen="@IsOpen"
             OnRunAdded="AddToList"
-            />
+            SchedulePhases="SchedulePhases"
+            RunTypes="RunTypes"/>
     </ChildContent>
 </AdminLayout>
 
 @code {
-    public int SelectedWeekNumber = 0;
-    public int SelectedDayNumber = 0;
-    public bool IsOpen = false;
-
-    private void OpenModal(int weekNumber, int dayNumber)
-    {
-        SelectedWeekNumber = weekNumber;
-        SelectedDayNumber = dayNumber;
-        IsOpen = true;
-    }
-
-    private void AddToList(TemplateRunEntry newTemplateRunEntry)
-    {
-        newTemplateRunEntry.WeekNumber = SelectedWeekNumber;
-        newTemplateRunEntry.DayNumber = SelectedDayNumber;
-
-        TemplateRuns.Add(newTemplateRunEntry);
-        IsOpen = false;
-    }
-
-    private static string GetWeekRow(int weekNum)
-    {
-        return weekNum % 4 == 0 ? "mb-4" : "";
-    }
-
         private const string SelectStyle = "bg-gray-50 border border-gray-300 text-gray-900 " +
                                            "text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 " +
-                                           "block w-full lg:p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 " +
+                                           "block w-full lg:p-2.5 dark:bg-gray-900 dark:border-gray-600 dark:placeholder-gray-400 " +
                                            "dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500";
 
         private const string InputTextStyle = "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg " +
-                                              "focus:ring-blue-500 focus:border-blue-500 block w-full lg:p-2.5 dark:bg-gray-700 " +
+                                              "focus:ring-blue-500 focus:border-blue-500 block w-full lg:p-2.5 dark:bg-gray-900 " +
                                               "dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 " +
                                               "dark:focus:border-blue-500";
-
 }
