--- a/Pages/Shared/Footer.razor
+++ b/Pages/Shared/Footer.razor
@@ -1,9 +1,9 @@
 ﻿<footer class="justify-between text-[0.6rem] md:text-xs gap-4 flex w-full px-8  h-10">
     <div class="flex gap-4">
-        <p class=" text-gray-600 mb-6 dark:text-slate-500">Michael Duren 2023</p>
-        <p class=" text-gray-600 dark:text-slate-500">Runner</p>
+        <p class=" text-gray-600 mb-6 dark:text-gray-500">Michael Duren 2023</p>
+        <p class=" text-gray-600 dark:text-gray-500">Runner</p>
     </div>
-    <div class="text-gray-600 dark:text-slate-500">
+    <div class="text-gray-600 dark:text-gray-500">
         <a href="">LinkedIn</a>
         <a href="">Github</a>
         <a href="">Twitter</a>
