--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -12,7 +12,7 @@
             <p class="font-light text-transparent bg-clip-text bg-gradient-to-r from-sky-500 via-purple-700 dark:via-purple-400 to-green-400  sm:text-xl text-gray-600 mb-6">
                 A <span class="font-semibold">new</span> way to track your training progress.
             </p>
-            <p class="text-sm leading-6 font-semibold  text-gray-600 dark:text-slate-500 mb-6">
+            <p class="text-sm leading-6 font-semibold  text-gray-600 dark:text-gray-500 mb-6">
                 Runner is a simple application that allows you to track your training progress.
                 Leave the scheduling and planning to us, and focus on what matters most: <span class="font-bold">running</span>.
                 Schedules for all levels of runners, from beginners to advanced.
