--- a/Pages/Shared/AdminLayout.razor
+++ b/Pages/Shared/AdminLayout.razor
@@ -5,13 +5,13 @@
 <AuthorizeView Roles="@CustomRoles.Admin">
     <Authorized>
         <div class="w-full">
-            <h1 class="text-2xl text-gray-600 font-semibold  dark:text-slate-300 sm:text-4xl mb-8 ">
+            <h1 class="text-2xl text-gray-600 font-semibold  dark:text-gray-300 sm:text-4xl mb-8 ">
                 Admin Dashboard
             </h1>
         </div>
         <div class="flex flex-col min-h-full gap-y-4 lg:gap-y-0 min-w-full lg:flex-row lg:gap-x-4 xl:gap-8">
-            <aside class="max-h-screen">
-                <ul class="flex lg:flex-col justify-evenly lg:justify-start flex-wrap shadow-xl dark:shadow-indigo-500 dark:shadow-md  h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+            <aside class="max-h-screen dark:shadow-indigo-500 shadow-xl dark:shadow-md">
+                <ul class="flex lg:flex-col justify-evenly lg:justify-start flex-wrap shadow-xl dark:shadow-indigo-500 dark:shadow-md  h-full flex-1 text-gray-600 dark:text-gray-300  bg-white dark:bg-gray-900 p-6 rounded-lg gap-4">
                     <li>
                         <AdminSideNavButton OnClick="@NavigateToDashboard" Icon="fa-solid fa-table-columns" Title="Dashboard"/>
                     </li>
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
             </aside>
-            <section class="flex flex-col w-full shadow-xl dark:shadow-indigo-500 dark:shadow-md text-sm h-full flex-1 text-gray-600 dark:text-slate-300  bg-white dark:bg-slate-800 p-6 rounded-lg gap-4">
+            <section class="flex flex-col w-full shadow-xl dark:shadow-indigo-500 dark:shadow-md text-sm h-full flex-1 text-gray-600 dark:text-gray-300  bg-white dark:bg-gray-900 p-6 rounded-lg gap-4">
                 @ChildContent
             </section>
         </div>
