--- a/Pages/Shared/NavMenu.razor
+++ b/Pages/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
                     <!-- Profile dropdown -->
                     <div class="relative ml-3">
                         <div>
-                            <button x-on:click="desktopMenuOpen = true" type="button" class="inline-flex text-slate-900 dark:text-slate-50 items-center rounded-full bg-transparent" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                            <button x-on:click="desktopMenuOpen = true" type="button" class="inline-flex text-gray-900 dark:text-gray-50 items-center rounded-full bg-transparent" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                                 <span class="sr-only">Open user menu</span>
                                 @user.Name
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -36,17 +36,17 @@
                                 </svg>
                             </button>
                         </div>
-                        <div x-cloak x-on:click.outside="desktopMenuOpen = false" x-show="desktopMenuOpen" class="absolute dark:bg-slate-800  right-0 z-50 mt-2 w-48 origin-top-right shadow-lg dark:shadow-slate-800 rounded-md bg-white py-1" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+                        <div x-cloak x-on:click.outside="desktopMenuOpen = false" x-show="desktopMenuOpen" class="absolute dark:bg-gray-800  right-0 z-50 mt-2 w-48 origin-top-right shadow-lg dark:shadow-gray-800 rounded-md bg-white py-1" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                             <div>
-                                <a href="/dashboard" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Dashboard</a>
+                                <a href="/dashboard" @click="desktopMenuOpen = false" class="block p-4 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Dashboard</a>
                                 <AuthorizeView Roles="@CustomRoles.Admin" Context="adminContext">
                                     <Authorized>
-                                        <a href="/admin/dashboard" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Admin Dashboard</a>
+                                        <a href="/admin/dashboard" @click="desktopMenuOpen = false" class="block p-4 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Admin Dashboard</a>
                                     </Authorized>
                                 </AuthorizeView>
-                                <a href="/profile/edit" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Profile</a>
-                                <a href="/logout" @click="desktopMenuOpen = false" class="block p-4 dark:text-slate-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Logout</a>
-                                <p class="text-sm dark:text-slate-300 py-2 px-4 dark:border-slate-700 border-t">@user.Name</p>
+                                <a href="/profile/edit" @click="desktopMenuOpen = false" class="block p-4 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Profile</a>
+                                <a href="/logout" @click="desktopMenuOpen = false" class="block p-4 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-indigo-500" role="menuitem">Logout</a>
+                                <p class="text-sm dark:text-gray-300 py-2 px-4 dark:border-gray-700 border-t">@user.Name</p>
                             </div>
                         </div>
                     </div>
